fix(sidebar-menu) : Scroll overflow

--- a/src/app/components/left-sidebar/left-sidebar.component.css
+++ b/src/app/components/left-sidebar/left-sidebar.component.css
@@ -2,9 +2,14 @@
   position: fixed;
   left: 0px;
   margin-top: 25px;
-  background-color: #F3F3F3;
-  border:solid 1px #F3F3F3;
-  height: 100vh;
+  background-color: #f3f3f3;
+  border: solid 1px #f3f3f3;
+  height: 100%;
+}
+
+.scroll {
+  height: 100vh !important;
+  overflow: scroll;
 }
 
 #sidebar-arrow {
@@ -23,16 +28,14 @@
   padding-bottom: 6px;
   font-size: 12px;
   color: #000000;
-
 }
 
-.panel-body{
-  padding-left: 0px!important;
-  padding-right: 0px!important;
+.panel-body {
+  padding-left: 0px !important;
+  padding-right: 0px !important;
 }
 
 panel-heading {
-  border-top-left-radius: 0px!important;
-  border-top-right-radius: 0px!important;
+  border-top-left-radius: 0px !important;
+  border-top-right-radius: 0px !important;
 }
-
